// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AoiList matches snapshot 1`] = `
<DocumentFragment>
  <div
    class=""
    style="height: 100%; width: 100%;"
  >
    <div
      class="aoi-list"
    >
      <div
        class="aoi-list__header"
      >
        <div
          class="aoi-list-item"
        >
          <div
            class="aoi-item-coll area"
          >
            <span
              class="aoi-list-header-coll"
            >
              <span
                class="aoi-list-header-coll__title"
              >
                Area
              </span>
              <span
                class="sort-indicator aoi-list-header-coll__sort-indicator"
              >
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
          <div
            class="aoi-item-coll percent-completed"
          >
            <span
              class="aoi-list-header-coll"
            >
              <span
                class="aoi-list-header-coll__title"
              >
                Progress
              </span>
              <span
                class="sort-indicator aoi-list-header-coll__sort-indicator"
              >
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
          <div
            class="aoi-item-coll status"
          >
            <span
              class="aoi-list-header-coll"
            >
              <span
                class="aoi-list-header-coll__title"
              >
                Status
              </span>
              <span
                class="sort-indicator aoi-list-header-coll__sort-indicator"
              >
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-non-ideal-state aoi-list-loader"
      >
        <div
          class="bp3-non-ideal-state-visual"
        >
          <div
            class="bp3-spinner"
          >
            <div
              class="bp3-spinner-animation"
            >
              <svg
                height="50"
                stroke-width="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width="50"
              >
                <path
                  class="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
        </div>
        <h4
          class="bp3-heading"
        >
          Loading
        </h4>
        <div>
          Fetching AOI's
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AoiList should show aois 1`] = `
<DocumentFragment>
  <div
    class=""
    style="height: 100%; width: 100%;"
  >
    <div
      class="aoi-list"
    >
      <div
        class="aoi-list__header"
      >
        <div
          class="aoi-list-item"
        >
          <div
            class="aoi-item-coll area"
          >
            <span
              class="aoi-list-header-coll"
            >
              <span
                class="aoi-list-header-coll__title"
              >
                Area
              </span>
              <span
                class="sort-indicator aoi-list-header-coll__sort-indicator"
              >
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
          <div
            class="aoi-item-coll percent-completed"
          >
            <span
              class="aoi-list-header-coll"
            >
              <span
                class="aoi-list-header-coll__title"
              >
                Progress
              </span>
              <span
                class="sort-indicator aoi-list-header-coll__sort-indicator"
              >
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
          <div
            class="aoi-item-coll status"
          >
            <span
              class="aoi-list-header-coll"
            >
              <span
                class="aoi-list-header-coll__title"
              >
                Status
              </span>
              <span
                class="sort-indicator aoi-list-header-coll__sort-indicator"
              >
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="infinite-list"
      >
        <div
          style="overflow: visible; height: 0px; width: 0px;"
        >
          <div
            style="position: relative; height: 1000px; width: 400px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 240px; width: 100%;"
            >
              <div
                class="infinite-list-item"
                style="position: absolute; left: 0px; top: 0px; height: 40px; width: 100%;"
              >
                <div
                  class="aoi-list-item"
                >
                  <div
                    class="aoi-item-coll area"
                  >
                    147828 m
                    <sup>
                      2
                    </sup>
                  </div>
                  <div
                    class="aoi-item-coll percent-completed"
                  >
                    0 %
                  </div>
                  <div
                    class="aoi-item-coll status"
                  >
                    <span
                      class="bp3-tag bp3-minimal bp3-round"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        unprocessed
                      </span>
                    </span>
                  </div>
                  <div
                    class="aoi-item-coll actions"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal bp3-small"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-more"
                            icon="more"
                          >
                            <svg
                              data-icon="more"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                more
                              </desc>
                              <path
                                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="infinite-list-item odd"
                style="position: absolute; left: 0px; top: 40px; height: 40px; width: 100%;"
              >
                <div
                  class="aoi-list-item"
                >
                  <div
                    class="aoi-item-coll area"
                  >
                    54243 m
                    <sup>
                      2
                    </sup>
                  </div>
                  <div
                    class="aoi-item-coll percent-completed"
                  >
                    0 %
                  </div>
                  <div
                    class="aoi-item-coll status"
                  >
                    <span
                      class="bp3-tag bp3-minimal bp3-round"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        unprocessed
                      </span>
                    </span>
                  </div>
                  <div
                    class="aoi-item-coll actions"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal bp3-small"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-more"
                            icon="more"
                          >
                            <svg
                              data-icon="more"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                more
                              </desc>
                              <path
                                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="infinite-list-item"
                style="position: absolute; left: 0px; top: 80px; height: 40px; width: 100%;"
              >
                <div
                  class="aoi-list-item"
                >
                  <div
                    class="aoi-item-coll area"
                  >
                    36292 m
                    <sup>
                      2
                    </sup>
                  </div>
                  <div
                    class="aoi-item-coll percent-completed"
                  >
                    0 %
                  </div>
                  <div
                    class="aoi-item-coll status"
                  >
                    <span
                      class="bp3-tag bp3-minimal bp3-round"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        unprocessed
                      </span>
                    </span>
                  </div>
                  <div
                    class="aoi-item-coll actions"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal bp3-small"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-more"
                            icon="more"
                          >
                            <svg
                              data-icon="more"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                more
                              </desc>
                              <path
                                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="infinite-list-item odd"
                style="position: absolute; left: 0px; top: 120px; height: 40px; width: 100%;"
              >
                <div
                  class="aoi-list-item"
                >
                  <div
                    class="aoi-item-coll area"
                  >
                    61934 m
                    <sup>
                      2
                    </sup>
                  </div>
                  <div
                    class="aoi-item-coll percent-completed"
                  >
                    0 %
                  </div>
                  <div
                    class="aoi-item-coll status"
                  >
                    <span
                      class="bp3-tag bp3-minimal bp3-round"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        unprocessed
                      </span>
                    </span>
                  </div>
                  <div
                    class="aoi-item-coll actions"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal bp3-small"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-more"
                            icon="more"
                          >
                            <svg
                              data-icon="more"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                more
                              </desc>
                              <path
                                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="infinite-list-item"
                style="position: absolute; left: 0px; top: 160px; height: 40px; width: 100%;"
              >
                <div
                  class="aoi-list-item"
                >
                  <div
                    class="aoi-item-coll area"
                  >
                    53530 m
                    <sup>
                      2
                    </sup>
                  </div>
                  <div
                    class="aoi-item-coll percent-completed"
                  >
                    0 %
                  </div>
                  <div
                    class="aoi-item-coll status"
                  >
                    <span
                      class="bp3-tag bp3-minimal bp3-round"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        unprocessed
                      </span>
                    </span>
                  </div>
                  <div
                    class="aoi-item-coll actions"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal bp3-small"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-more"
                            icon="more"
                          >
                            <svg
                              data-icon="more"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                more
                              </desc>
                              <path
                                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="infinite-list-item odd"
                style="position: absolute; left: 0px; top: 200px; height: 40px; width: 100%;"
              >
                <div
                  class="aoi-list-item"
                >
                  <div
                    class="aoi-item-coll area"
                  >
                    15708 m
                    <sup>
                      2
                    </sup>
                  </div>
                  <div
                    class="aoi-item-coll percent-completed"
                  >
                    0 %
                  </div>
                  <div
                    class="aoi-item-coll status"
                  >
                    <span
                      class="bp3-tag bp3-minimal bp3-round"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        unprocessed
                      </span>
                    </span>
                  </div>
                  <div
                    class="aoi-item-coll actions"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal bp3-small"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-more"
                            icon="more"
                          >
                            <svg
                              data-icon="more"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                more
                              </desc>
                              <path
                                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="resize-triggers"
        >
          <div
            class="expand-trigger"
          >
            <div
              style="width: 401px; height: 1001px;"
            />
          </div>
          <div
            class="contract-trigger"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
